Fix regle de calcul fin de convention PLS/sans travaux se baser sur la date de signature de la convention original pour les avenants (dans les cas de PLS et sans travaux) + correction de quelques coquilles

--- a/templates/conventions/financement.html
+++ b/templates/conventions/financement.html
@@ -125,9 +125,9 @@
                                                 <div class="fr-text--xs">
                                                     <div>
                                                         {% if convention.financement == 'PLS' %}
-                                                            La convention bénéficie d'un finncement PLS, la durée de conventionnement doit-être comprise entre 15 et 40 ans<br>
+                                                            La convention bénéficie d'un financement PLS, la durée de conventionnement doit être comprise entre 15 et 40 ans.<br>
                                                         {% elif convention.financement == 'SANS_FINANCEMENT' %}
-                                                            La conventionne bénéficie pas de financement, la durée de convnetionnement doit-être supérieur à 9 ans.
+                                                            La convention ne bénéficie pas de financement, la durée de conventionnement doit-être supérieur à 9 ans.
                                                         {% else %}
                                                             Année de signature de la convention + au moins la durée du prêt le plus long. <br>
                                                             Elle ne peut être inférieure à 9 ans.
