--- a/templates/conventions/financement.html
+++ b/templates/conventions/financement.html
@@ -125,9 +125,9 @@
                                                 <div class="fr-text--xs">
                                                     <div>
                                                         {% if convention.financement == 'PLS' %}
-                                                            La convention bénéficie d'un finncement PLS, la durée de conventionnement doit-être comprise entre 15 et 40 ans<br>
+                                                            La convention bénéficie d'un financement PLS, la durée de conventionnement doit être comprise entre 15 et 40 ans.<br>
                                                         {% elif convention.financement == 'SANS_FINANCEMENT' %}
-                                                            La conventionne bénéficie pas de financement, la durée de convnetionnement doit-être supérieur à 9 ans.
+                                                            La convention ne bénéficie pas de financement, la durée de conventionnement doit être supérieure à 9 ans.
                                                         {% else %}
                                                             Année de signature de la convention + au moins la durée du prêt le plus long. <br>
                                                             Elle ne peut être inférieure à 9 ans.
@@ -149,7 +149,7 @@
                                                     {% endif %}
                                                 </div>
                                                 <div class="block--row-strech-1">
-                                                    {% include "common/form/input_select.html" with form_input=form.annee_fin_conventionnement object_field="convention__annee_fin_conventionnement__"|add:form.uuid.value %}
+                                                    {% include "common/form/input_number.html" with form_input=form.annee_fin_conventionnement object_field="convention__annee_fin_conventionnement__"|add:form.uuid.value %}
                                                 </div>
                                             </div>
                                         </div>
