--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -33,31 +33,29 @@
                 </div>
                 {% include "conventions/avenant_list.html" with conventions=avenants %}
             </div>
-            {% if not convention.is_avenant %}
-                <div class="fr-col-12 fr-mb-4w">
-                    <div role="alert" class="fr-alert fr-alert--info  fr-icon-arrow-right-s-line-double">
-                        <p class="fr-alert__title">
-                            Créer un avenant
-                        </p>
-                        <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduques ?</p>
-                        <div class="block--row-strech">
-                            {% if convention|display_create_avenant %}
-                                <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
-                                    <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
-                                </a>
-                            {% else %}
-                                <button class="fr-btn fr-my-1w fr-mr-2w" disabled>
-                                    <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Un avenant est déjà en cours.
-                                </button>
-                            {% endif %}
-                            <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
-                                Consulter le récapitulatif
+            <div class="fr-col-12 fr-mb-4w">
+                <div role="alert" class="fr-alert fr-alert--info  fr-icon-arrow-right-s-line-double">
+                    <p class="fr-alert__title">
+                        Créer un {% if convention.is_avenant %}autre {% endif %}avenant
+                    </p>
+                    <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduques ?</p>
+                    <div class="block--row-strech">
+                        {% if convention.is_avenant and convention.parent|display_create_avenant or not convention.is_avenant and convention|display_create_avenant %}
+                            <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
+                                <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un {% if convention.is_avenant %}autre {% endif %}avenant
                             </a>
-                        </div>
+                        {% else %}
+                            <button class="fr-btn fr-my-1w fr-mr-2w" disabled>
+                                <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Un avenant est déjà en cours.
+                            </button>
+                        {% endif %}
+                        <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
+                            Consulter le récapitulatif
+                        </a>
                     </div>
                 </div>
-                <hr>
-            {% endif %}
+            </div>
+            <hr>
             <div class="fr-col-12">
                 <div class="fr-mb-2w block--row-strech">
                     <div class="block--row-strech-1 fr-my-2w">
