--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -28,15 +28,22 @@
                                 </div>
                                 {% if not CERBERE_AUTH and not request.user.is_staff %}
                                     <div class="fr-mr-3w">
-                                        <a class="fr-btn" href="{% url 'conventions:selection' %}">
-                                            <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
+                                        <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:selection' %}">
+                                            Créer une nouvelle convention
+                                        </a>
+                                    </div>
+                                {% endif %}
+                                {% if CERBERE_AUTH %}
+                                    <div class="fr-mr-3w">
+                                        <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:selection_from_zero' %}">
+                                            Créer une convention ANRU
                                         </a>
                                     </div>
                                 {% endif %}
                                 {% if not request.user.is_staff %}
                                     <div>
-                                        <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
-                                            <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                                        <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
+                                            Créer un avenant
                                         </a>
                                     </div>
                                 {% endif %}
@@ -58,7 +65,7 @@
                                 {% include 'conventions/home/_tab.html' with tab_active=active count=nb_active_conventions label='en cours' title='Conventions en cours' route='conventions:search_active' %}
                                 {% include 'conventions/home/_tab.html' with tab_active=active|negate count=nb_completed_conventions label='finalisées' title='Conventions finalisées' route='conventions:search_completed' %}
                                 <li class="fr-ml-md-auto">
-                                    <a class="fr-tabs__tab" href="{% url 'conventions:loyer_simulateur' %}" title="Calculatrice de loyers" aria-selected="false">
+                                    <a class="fr-tabs__tab " href="{% url 'conventions:loyer_simulateur' %}" title="Calculatrice de loyers" aria-selected="false">
                                         <span class="fr-link"><span aria-hidden="true" class="fr-icon-equalizer-fill"></span> Calculatrice de loyers</span>
                                     </a>
                                 </li>
@@ -75,13 +82,25 @@
                     <div class="fr-container">
                         <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
                             <div class="fr-my-5w">
-                                <a class="fr-btn" href="{% url 'conventions:selection' %}">
-                                    <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>
+                                <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:selection' %}">
                                     {% if request|is_instructeur %}
                                         Créer une nouvelle convention comme un bailleur
                                     {% else %}
                                         Créer une nouvelle convention
                                     {% endif %}
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+            {% if CERBERE_AUTH %}
+                <div class="fr-container-fluid">
+                    <div class="fr-container">
+                        <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
+                            <div class="fr-my-5w">
+                                <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:selection_from_zero' %}">
+                                    Créer une convention ANRU
                                 </a>
                             </div>
                         </div>
