Add templatetag to filter non existing files

--- a/templates/common/display_files.html
+++ b/templates/common/display_files.html
@@ -1,3 +1,4 @@
+{% load custom_filters %}
 {% for file in file_list %}
     <div class="content__fileblock">
         <div class='fr-mx-1w dz-image'>
