--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -1,6 +1,4 @@
-{% load static %}
-
-{% load custom_filters %}
+{% load static custom_filters %}
 
 <div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}" id="{{form_input.id_for_label}}_group">
     <div class="fr-mb-2w">
@@ -75,7 +73,9 @@
                 type="hidden"
                 id="{{form_input_files.id_for_label}}"
                 name="{{form_input_files.html_name}}"
-                value="{{form_input_files.value}}" />
+                value="{{form_input_files.value|without_missing_files}}"
+            />
+
             <div id="{{form_input_files.id_for_label}}_errors"></div>
             <input
                 type="hidden"
