--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -10,59 +10,67 @@
         {% include "conventions/common/form_header.html"%}
         {% include "common/nav_bar.html" with nav_bar_step="action" %}
         <div class="fr-container fr-py-5w">
-            <div class="fr-col-12 fr-mt-2w fr-mb-4w">
-                <p class="fr-alert__title">
-                    Historique
-                </p>
-                <div class="fr-grid-row">
-                    <div class="apilos-step-post-action fr-mr-2w">
-                        <div class="apilos-step-post-action--bubble fr-mr-2w"></div>
-                        {% if total_avenants > 0 %}
-                            <div class="apilos-step-post-action--line"></div>
-                        {% endif %}
+            {% if not convention.is_avenant %}
+                <div class="fr-col-12 fr-mt-2w fr-mb-4w">
+                    <p class="fr-alert__title">
+                        Historique
+                    </p>
+                    <div class="fr-grid-row">
+                        <div class="apilos-step-post-action fr-mr-2w">
+                            <div class="apilos-step-post-action--bubble fr-mr-2w"></div>
+                            {% if total_avenants > 0 %}
+                                <div class="apilos-step-post-action--line"></div>
+                            {% endif %}
+                        </div>
+                        <div class="fr-col-11">
+                            {% if convention.televersement_convention_signee_le %}
+                                <div class="fr-grid-row">{{convention|display_kind_with_cap}} signé{{convention|display_gender_terminaison}} le <span class="fr-ml-1v"><strong>{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}</strong></span></div>
+                            {% else %}
+                                <div class="fr-grid-row">Votre convention signée a déjà été déposée</div>
+                            {% endif %}
+                            <div class="fr-mb-3w">
+                                <a class="fr-link" href="{% url 'conventions:preview' convention_uuid=convention.uuid %}"> Voir en PDF</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="fr-col-11">
-                        {% if convention.televersement_convention_signee_le %}
-                            <div class="fr-grid-row">{{convention|display_kind_with_cap}} signé{{convention|display_gender_terminaison}} le <span class="fr-ml-1v"><strong>{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}</strong></span></div>
-                        {% else %}
-                            <div class="fr-grid-row">Votre convention signée a déjà été déposée</div>
-                        {% endif %}
-                        <div class="fr-mb-3w">
-                            <a class="fr-link" href="{% url 'conventions:preview' convention_uuid=convention.uuid %}"> Voir en PDF</a>
+                    {% include "conventions/avenant_list.html" with conventions=avenants %}
+                    {% include "conventions/denonciation_list.html" with conventions=denonciation %}
+                </div>
+            {% else %}
+                <div class="fr-py-3w">
+                    <a class='fr-btn' href="{% url 'conventions:post_action' convention_uuid=convention.parent.uuid %}">Retour à la convention originale</a>
+                </div>
+            {% endif %}
+            {% if convention|display_is_not_resiliated_or_denonciated %}
+                <div class="fr-col-12 fr-mb-4w">
+                    <div role="alert" class="fr-alert fr-alert--info  fr-icon-arrow-right-s-line-double">
+                        <p class="fr-alert__title">
+                            Créer un {% if convention.is_avenant %}autre {% endif %}avenant
+                        </p>
+                        <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduques ?</p>
+                        <div class="block--row-strech">
+                            {% if convention.is_avenant and convention.parent|display_create_avenant or not convention.is_avenant and convention|display_create_avenant  %}
+                                <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
+                                    <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un {% if convention.is_avenant %}autre {% endif %}avenant
+                                </a>
+                            {% else %}
+                                <button class="fr-btn fr-my-1w fr-mr-2w" disabled>
+                                    <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>
+                                    {% if convention.is_avenant and convention.is_denonciation %}
+                                        La dénonciation de la convention est en cours
+                                    {% else %}
+                                        Un avenant est déjà en cours.
+                                    {% endif %}
+                                </button>
+                            {% endif %}
+                            <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
+                                Consulter le récapitulatif
+                            </a>
                         </div>
                     </div>
                 </div>
-                {% include "conventions/avenant_list.html" with conventions=avenants %}
-                {% include "conventions/denonciation_list.html" with conventions=denonciation %}
-            </div>
-            <div class="fr-col-12 fr-mb-4w">
-                <div role="alert" class="fr-alert fr-alert--info  fr-icon-arrow-right-s-line-double">
-                    <p class="fr-alert__title">
-                        Créer un {% if convention.is_avenant %}autre {% endif %}avenant
-                    </p>
-                    <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduques ?</p>
-                    <div class="block--row-strech">
-                        {% if convention.is_avenant and convention.parent|display_create_avenant or not convention.is_avenant and convention|display_create_avenant  %}
-                            <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
-                                <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un {% if convention.is_avenant %}autre {% endif %}avenant
-                            </a>
-                        {% else %}
-                            <button class="fr-btn fr-my-1w fr-mr-2w" disabled>
-                                <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>
-                                {% if convention.is_avenant and convention.is_denonciation %}
-                                    La dénonciation de la convention est en cours
-                                {% else %}
-                                    Un avenant est déjà en cours.
-                                {% endif %}
-                            </button>
-                        {% endif %}
-                        <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
-                            Consulter le récapitulatif
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <hr>
+                <hr>
+            {% endif %}
             <div class="fr-col-12">
                 <div class="fr-mb-2w block--row-strech">
                     <div class="block--row-strech-1 fr-my-2w">
