--- a/templates/conventions/submitted.html
+++ b/templates/conventions/submitted.html
@@ -20,7 +20,7 @@
                 <div class="fr-col-md-12  fr-my-5w">
                     <h2>Félicitations</h2>
                     <h4 class="fr-mb-3w">Bravo, vous venez de soumettre votre {% if convention.is_denonciation %}dénonciation de {% elif convention.is_avenant %}avenant de {% endif %}convention à l'instruction en date du {{convention.soumis_le}}</h4>
-                    <p class="fr-mb-3w">{{convention|display_pronom_with_cap}} présent{{convention|display_gender_terminaison}} {{convention|display_kind}} ne peut plus être modifié{{convention|display_gender_terminaison}}. Le service instructeur a été notifié et instruira {{convention|display_kind_with_demonstratif}} dans les plus bref délais.
+                    <p class="fr-mb-3w">{{convention|display_pronom|capfirst}} présent{{convention|display_gender_terminaison}} {{convention|display_kind}} ne peut plus être modifié{{convention|display_gender_terminaison}}. Le service instructeur a été notifié et instruira {{convention|display_kind_with_demonstratif}} dans les plus bref délais.
                         Il reviendra ensuite vers vous pour finaliser {{convention|display_kind_with_demonstratif}}.
                     </p>
                     <p class="fr-mb-3w">Vous pouvez cependant consulter à tout moment les données saisies ainsi que le statut d'instruction sur la plateforme APiLos</p>
