--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -24,7 +24,7 @@
                         </div>
                         <div class="fr-col-11">
                             {% if convention.televersement_convention_signee_le %}
-                                <div class="fr-grid-row">{{convention|display_kind_with_cap}} signé{{convention|display_gender_terminaison}} le <span class="fr-ml-1v"><strong>{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}</strong></span></div>
+                                <div class="fr-grid-row">{{convention|display_kind|capfirst}} signé{{convention|display_gender_terminaison}} le <span class="fr-ml-1v"><strong>{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}</strong></span></div>
                             {% else %}
                                 <div class="fr-grid-row">Votre convention signée a déjà été déposée</div>
                             {% endif %}
